# TQA-Bench

./: .gitignore  analyze_results.py  hello.py  pyproject.toml  reanalyze_results.py  test.py
benchmarkLoader/: __init__.py
benchmarkLoader/prompts/: singleChoicePrompt.txt  singleChoiceToolsPrompt.txt
benchmarkUtils/: LLM.py  database.py  jsTool.py
symDataloader/: dryrun.py  gpt4o.py  gpt4o_mini.py  gpt4o_mini_agent.py  gpt4o_mini_tools.py  gpt5_mini.py  gpt5_mini_agent.py  gpt5_mini_tools.py  llamacpp_qwen.py  llamacpp_qwen_tools.py  llamacpp_qwen_tools_dynamic.py  llamacpp_qwen_tools_guidance.py  lmstudio_qwen.py  lmstudio_qwen_tools.py  test.py  testConfig.py  transformers_qwen.py  transformers_qwen_tools.py  utils.py
