[project]
name = "tqa-bench"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "lmstudio>=1.3.1",
    "pandas>=2.3.0",
    "simplejson>=3.20.1",
    "tabulate>=0.9.0",
    "tiktoken>=0.9.0",
    "torch>=2.7.1",
    "torchaudio>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "transformers>=4.53.2",
]
